Updated demo using new chart types (radar, parallel coordinates)

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -29,6 +29,8 @@
   "GAUGESPACE": "Gauge Space Chart",
   "RADIALPERCENT": "Radial Percent Chart",
   "BULLET": "Bullet Chart",
-  "STACKEDAREA": "Stacked Area Chart"
+  "STACKEDAREA": "Stacked Area Chart",
+  "PARALLELCOORDINATES": "Parallel Coordinates Chart",
+  "RADAR": "Radar Chart"
 
 }
