Updated example component

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -41,17 +41,21 @@
   "BAR_CHART.DISCRETE_INSIDE_FORM":"Discrete Bar Chart (Inside a form)",
   "BAR_CHART.DISCRETE_INSIDE_FORM.DESC":"When a chart is included inside an Ontimize form, it is possible to configure the parameter 'parent-keys' for filtering the results of chart service query.",
   "BAR_CHART.DISCRETE_CUSTOM":"Discrete Bar Chart (Custom data)",
-  "BAR_CHART.DISCRETE_CUSTOM.DESC":"Chart data are provided through an Ontimize service, but the user is the responsible of perform the query call. This case is very useful to perform queries with custom filters and also to process service response for creating aggregate data from queried data.<br><br> In this example, it is performed an Ontimize service query filtering by 'ACCOUNTID' = 7310. Once service response is received, data is processed for grouping all movements (amount of money in (€)) depending on its movement type ('Direct debit', 'Transfer', ...)",
+  "BAR_CHART.DISCRETE_CUSTOM.DESC":"Chart data are provided through an Ontimize service, but the user is the responsible of perform the query call.",
+  "BAR_CHART.DISCRETE_CUSTOM.NOTE":"This case is very useful to perform queries with custom filters and also to process service response for creating aggregate data from queried data.<br><br> In this example, it is performed an Ontimize service query filtering by 'ACCOUNTID' = 7310. Once service response is received, data is processed for grouping all movements (amount of money in (€)) depending on its movement type ('Direct debit', 'Transfer', ...)",
   "BAR_CHAR.MULTIBAR_BASIC":"Multi Bar Chart (Basic usage)",
-  "BAR_CHAR.MULTIBAR_BASIC.DESC":"Chart data are provided through an Ontimize service.<BR><BR>In this example, full chart data are provided by the Ontimize service query, that is, the aggregated data (balance and average balance) are calculated into an Ontimize entity on the server side.",
+  "BAR_CHAR.MULTIBAR_BASIC.DESC":"Chart data are provided through an Ontimize service.",
+  "BAR_CHAR.MULTIBAR_BASIC.NOTE":"In this example, full chart data are provided by the Ontimize service query, that is, the aggregated data (balance and average balance) are calculated into an Ontimize entity on the server side.",
   "BAR_CHAR.MULTIBAR_CUSTOM_SERIES":"Multi Bar Chart (Custom series)",
-  "BAR_CHAR.MULTIBAR_CUSTOM_SERIES.DESC":"In some applications it cannot be possible to modify Ontimize entity code, so, calculating aggregate data have to be performed into client side (it is not desired mode!).<BR><BR> In this example, it is performed an Ontimize service query to retrieve the movements of a determinate account. Once service response is received, data is processed for calculating the 'Total balance' and the 'Average balance' of the account.",
+  "BAR_CHAR.MULTIBAR_CUSTOM_SERIES.DESC":"In some applications it cannot be possible to modify Ontimize entity code, so, calculating aggregate data have to be performed into client side (it is not desired mode!).",
+  "BAR_CHAR.MULTIBAR_CUSTOM_SERIES.NOTE":"In this example, it is performed an Ontimize service query to retrieve the movements of a determinate account. Once service response is received, data is processed for calculating the 'Total balance' and the 'Average balance' of the account.",
   "BAR_CHAR.MULTIBAR_HORIZONTAL":"Multi Bar Chart Horizontal (Basic usage).",
   "BAR_CHAR.MULTIBAR_HORIZONTAL.DESC":"Chart data are provided through an Ontimize service",
   "BAR_CHAR.BULLET_BASIC":"Bullet Chart (Basic Usage)",
   "BAR_CHAR.BULLET_BASIC.DESC":"Chart data are provided through an Ontimize service.",
   "BAR_CHAR.BULLET_CUSTOM":"Bullet Chart (Custom Usage)",
-  "BAR_CHAR.BULLET_CUSTOM.DESC":"Chart data are provided through an independent own service. In this case de data are hard coded in the typescript",
+  "BAR_CHAR.BULLET_CUSTOM.DESC":"Chart data are provided through an independent own service.",
+  "BAR_CHAR.BULLET_CUSTOM.NOTE":"In this case the data are hard coded in the typescript",
   "AREA_CHAR.STACKED":"Stacked Area Chart",
   "AREA_CHAR.STACKED.DESC":"It is possible to configure several data series.",
   "AREA_CHAR.RADAR_BASIC":"Radar Chart (Basic Usage)",
@@ -68,23 +72,28 @@
   "GAUGE.GAUGE_DASHBOARD_BASIC":"Gauge Dashboard Chart (Basic Usage)",
   "GAUGE.GAUGE_DASHBOARD_BASIC.DESC":"Chart data are provided through an Ontimize service.",
   "GAUGE.GAUGE_DASHBOARD_CUSTOM":"Gauge Dashboard Chart (Custom Usage)",
-  "GAUGE.GAUGE_DASHBOARD_CUSTOM.DESC":"Chart data are provided through an independent own service. In this case de data are hard coded in the typescript.",
+  "GAUGE.GAUGE_DASHBOARD_CUSTOM.DESC":"Chart data are provided through an independent own service.",
+  "GAUGE.GAUGE_DASHBOARD_CUSTOM.NOTE":"In this case de data are hard coded in the typescript.",
   "GAUGE.GAUGE_RADIAL_PERCENT_BASIC":"Radial Percent Chart (Basic Usage)",
   "GAUGE.GAUGE_RADIAL_PERCENT_BASIC.DESC":"Chart data are provided through an Ontimize service.",
   "GAUGE.GAUGE_RADIAL_PERCENT_CUSTOM":"Radial Percent Chart (Custom Usage)",
-  "GAUGE.GAUGE_RADIAL_PERCENT_CUSTOM.DESC":"Chart data are provided through an independent own service. In this case de data are hard coded in the typescript.",
+  "GAUGE.GAUGE_RADIAL_PERCENT_CUSTOM.DESC":"Chart data are provided through an independent own service.",
+  "GAUGE.GAUGE_RADIAL_PERCENT_CUSTOM.NOTE":"In this case de data are hard coded in the typescript.",
   "GAUGE.GAUGE_SIMPLE_BASIC":"Gauge Simple Chart (Basic Usage)",
   "GAUGE.GAUGE_SIMPLE_BASIC.DESC":"Chart data are provided through an Ontimize service.",
   "GAUGE.GAUGE_SIMPLE_CUSTOM":"Gauge Simple Chart (Custom Usage)",
-  "GAUGE.GAUGE_SIMPLE_CUSTOM.DESC":"Chart data are provided through an independent own service. In this case de data are hard coded in the typescript.",
+  "GAUGE.GAUGE_SIMPLE_CUSTOM.DESC":"Chart data are provided through an independent own service.",
+  "GAUGE.GAUGE_SIMPLE_CUSTOM.NOTE":"In this case de data are hard coded in the typescript.",
   "GAUGE.GAUGE_SLIM_BASIC":"Gauge Slim Chart (Basic Usage)",
   "GAUGE.GAUGE_SLIM_BASIC.DESC":"Chart data are provided through an Ontimize service.",
   "GAUGE.GAUGE_SLIM_CUSTOM":"Gauge Slim Chart (Custom Usage)",
-  "GAUGE.GAUGE_SLIM_CUSTOM.DESC":"Chart data are provided through an independent own service. In this case de data are hard coded in the typescript.",
+  "GAUGE.GAUGE_SLIM_CUSTOM.DESC":"Chart data are provided through an independent own service.",
+  "GAUGE.GAUGE_SLIM_CUSTOM.NOTE":"In this case de data are hard coded in the typescript.",
   "GAUGE.GAUGE_SPACE_BASIC":"Gauge Space Chart (Basic Usage)",
   "GAUGE.GAUGE_SPACE_BASIC.DESC":"Chart data are provided through an Ontimize service.",
   "GAUGE.GAUGE_SPACE_CUSTOM":"Gauge Space Chart (Custom Usage)",
-  "GAUGE.GAUGE_SPACE_CUSTOM.DESC":"Chart data are provided through an independent own service. In this case de data are hard coded in the typescript.",
+  "GAUGE.GAUGE_SPACE_CUSTOM.DESC":"Chart data are provided through an independent own service.",
+  "GAUGE.GAUGE_SPACE_CUSTOM.NOTE":"In this case de data are hard coded in the typescript.",
   "OTHER_CHARTS.DONUT_BASIC":"Donut Chart (Basic Usage)",
   "OTHER_CHARTS.DONUT_BASIC.DESC":"Chart data are provided through an Ontimize service.",
   "OTHER_CHARTS.DONUT_CUSTOM":"Donut Chart (Custom Configuration)",
@@ -92,16 +101,17 @@
   "OTHER_CHARTS.CANDLESTICK_BASIC":"Candlestick Chart (Basic Usage)",
   "OTHER_CHARTS.CANDLESTICK_BASIC.DESC":"Chart data are provided through an Ontimize service",
   "OTHER_CHARTS.CANDLESTICK_CUSTOM":"Candlestick Chart (Custom Service)",
-  "OTHER_CHARTS.CANDLESTICK_CUSTOM.DESC":"Chart data are provided through an independent own service. In this case de data are hard coded in the typescript",
+  "OTHER_CHARTS.CANDLESTICK_CUSTOM.DESC":"Chart data are provided through an independent own service.",
+  "OTHER_CHARTS.CANDLESTICK_CUSTOM.NOTE":"In this case de data are hard coded in the typescript",
   "OTHER_CHARTS.PIE_BASIC":"Pie Chart (Basic usage)",
   "OTHER_CHARTS.PIE_BASIC.DESC":"Chart data are provided through an Ontimize service",
   "OTHER_CHARTS.PIE_CUSTOM":"Pie Chart (Custom Configuration)",
   "OTHER_CHARTS.PIE_CUSTOM.DESC":"",
   "OTHER_CHARTS.PIE_CUSTOM_SERVICE":"Pie Chart (Custom service)",
-  "OTHER_CHARTS.PIE_CUSTOM_SERVICE.DESC":"Chart data are provided through an independent own service. In that case the service response contains the data according to the architecture expected by the chart (see 'service data' tab)",
+  "OTHER_CHARTS.PIE_CUSTOM_SERVICE.DESC":"Chart data are provided through an independent own service.",
+  "OTHER_CHARTS.PIE_CUSTOM_SERVICE.NOTE":"In that case the service response contains the data according to the architecture expected by the chart (see 'typescript' tab)",
   "OTHER_CHARTS.FORCE_DIRECT":"Force Directed Graph (Basic Usage)",
   "OTHER_CHARTS.FORCE_DIRECT.DESC":"Data provided by the user",
-
   "DATE_":"Operation date",
   "MOVEMENT":"Movement",
   "MOVEMENTTYPES":"Movement types",
