Updated titles of the charts

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -4,20 +4,21 @@
 
   "INTRODUCTION": "Introduction",
   "LINE" : "Line chart",
+  "LINE_CHARTS" : "Line charts",
   "LINEPLUSBAR": "Line + Bar chart",
-  "BARCHART" : "Bar chart",
-  "AREACHART" : "Area chart",
-  "BUBBLECHART" : "Bubble chart",
+  "BARCHART" : "Bar charts",
+  "AREACHART" : "Area charts",
+  "BUBBLECHART" : "Bubble charts",
   "PIE"  : "Pie chart",
   "DONUT": "Donut chart",
-  "DISCRETE_BAR"  : "Discrete Bar chart",
+  "DISCRETE_BAR"  : "Discrete bar chart",
   "MULTI_BAR"  : "Multi bar chart",
   "MULTI_BAR_HORIZONTAL": "Multi bar horizontal chart",
   "SCATTER": "Scatter chart",
   "DIRECTEDGRAPH": "Force directed graph",
   "CANDLESTICK": "Candlestick bar chart",
   "OHLCCHART": "Ohlc chart",
-  "OTHERCHART":"Other Chart",
+  "OTHERCHART":"Other Charts",
   "LINE_CHART.LINE_BASIC":"Line Chart (Basic usage)",
   "LINE_CHART.LINE_BASIC.DESC":"Chart data are provided through an Ontimize service.",
   "LINE_CHART.LINE_CUSTOM":"Line Chart (Custom configuration)",
@@ -118,16 +119,16 @@
   "BALANCE": "Total Balance",
   "AVERAGE": "Average Balance",
 
-  "BUBBLE": "Bubble Chart",
+  "BUBBLE": "Bubble chart",
   "GAUGE": "Gauge Charts",
-  "GAUGEDASHBOARD": "Gauge Dashboard Chart",
-  "GAUGESIMPLE": "Gauge Simple Chart",
-  "GAUGESLIM": "Gauge Slim Chart",
-  "GAUGESPACE": "Gauge Space Chart",
-  "RADIALPERCENT": "Radial Percent Chart",
-  "BULLET": "Bullet Chart",
-  "STACKEDAREA": "Stacked Area Chart",
-  "PARALLELCOORDINATES": "Parallel Coordinates Chart",
-  "RADAR": "Radar Chart"
+  "GAUGEDASHBOARD": "Gauge dashboard chart",
+  "GAUGESIMPLE": "Gauge simple chart",
+  "GAUGESLIM": "Gauge slim chart",
+  "GAUGESPACE": "Gauge space chart",
+  "RADIALPERCENT": "Radial percent chart",
+  "BULLET": "Bullet chart",
+  "STACKEDAREA": "Stacked area chart",
+  "PARALLELCOORDINATES": "Parallel coordinates chart",
+  "RADAR": "Radar chart"
 
 }
