Added dynamic chart generator

--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -1,26 +1,23 @@
 {
-  "APP_TITLE" : "Gráficas",
-  "VERSION" : "Versión",
-  
+  "APP_TITLE": "Gráficas",
+  "VERSION": "Versión",
   "INTRODUCTION": "Introducción",
-  "LINE" : "Gráfica de línea",
+  "LINE": "Gráfica de línea",
   "LINEPLUSBAR": "Gráfica de barras y líneas",
-  "PIE"  : "Gráfica circular",
+  "PIE": "Gráfica circular",
   "DONUT": "Gráfica donut",
-  "DISCRETE_BAR"  : "Gráfica de barras discreta",
-  "MULTI_BAR"  : "Gráfica de barras múltiple",
-  "MULTI_BAR_HORIZONTAL" :  "Gráfica de barras múltiple horizontal",
+  "DISCRETE_BAR": "Gráfica de barras discreta",
+  "MULTI_BAR": "Gráfica de barras múltiple",
+  "MULTI_BAR_HORIZONTAL": "Gráfica de barras múltiple horizontal",
   "SCATTER": "Gráfica de puntos",
   "DIRECTEDGRAPH": "Grafo diridigo",
   "CANDLESTICK": "Gráfico de barras de velas",
   "OHLCCHART": "Gráfico de barras OHLC",
-
-  "DATE_":"Fecha de movimiento",
-  "MOVEMENT":"Movimiento",
-  "MOVEMENTTYPES":"Tipo de movimiento",
+  "DATE_": "Fecha de movimiento",
+  "MOVEMENT": "Movimiento",
+  "MOVEMENTTYPES": "Tipo de movimiento",
   "BALANCE": "Saldo Total",
   "AVERAGE": "Saldo medio",
-
   "BUBBLE": "Gráfico de burbujas",
   "GAUGE": "Gráficos Gauge",
   "GAUGEDASHBOARD": "Gráfico Gauge Dashboard",
@@ -29,5 +26,46 @@
   "GAUGESPACE": "Gráfico Gauge Space",
   "RADIALPERCENT": "Gráfico Porcentaje Circular",
   "PARALLELCOORDINATES": "Gráfico de coordenadas paralelas",
-  "RADAR": "Gráfica radar"
+  "RADAR": "Gráfica radar",
+  "CHART.CHART_TITLE": "Título",
+  "CHART.CHART_SUBTITLE": "Subtítulo",
+  "CHART.CHART_TYPE": "Tipo de gráfico",
+  "CHART.SELECT_TYPE": "Seleccionar tipo",
+  "CHART.DATA": "Datos",
+  "CHART.PALETTE": "Colores",
+  "CHART.SELECT_PALETTE": "Seleccionar tema",
+  "CHART.DIMENSIONS": "Dimensiones",
+  "fit_container": "Ajustar al contenedor",
+  "CHART.OPTIONS": "Opciones",
+  "CHART.LEGEND": "Leyenda",
+  "CHART.SELECT_LEGEND_POSITION": "Seleccionar posición de la leyenda",
+  "CHART.WIDTH": "Ancho",
+  "CHART.HEIGHT": "Alto",
+  "CHART.SELECT_LEGEND_TITLE": "Título de la leyenda",
+  "SHOW_X_AXIS": "Mostrar eje X",
+  "SHOW_Y_AXIS": "Mostrar eje y",
+  "SHOW_GRID_LINES": "Mostrar cuadrícula",
+  "SHOW_LEGEND": "Mostrar leyenda",
+  "CHART.X_AXIS": "Eje X",
+  "CHART.SELECT_X_AXIS_TYPE": "Seleccionar el tipo del eje X",
+  "CHART.Y_AXIS": "Eje Y",
+  "CHART.SELECT_Y_AXIS_TYPE": "Seleccionar el tipo del eje Y",
+  "vivid": "Vívido",
+  "natural": "Natural",
+  "cool": "Fresco",
+  "fire": "Fuego",
+  "solar": "Solar",
+  "air": "Aire",
+  "aqua": "Agua",
+  "flame": "Llama",
+  "ocean": "Océano",
+  "forest": "Bosque",
+  "horizon": "Horizonte",
+  "neons": "Neones",
+  "picnic": "Picnic",
+  "night": "Noche",
+  "nightLights": "Luces Nocturnas",
+  "CREATECHART": "Gráfica personalizada",
+  "CUSTOM_CHART_TITLE": "Crea tu propia gráfica",
+  "FIT_CONTAINER": "Ajustar contenedor"
 }
